style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
  font-family: monospace;
  background-color: #2E3440;
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 1rem;
}

p {
    margin: 0;
    white-space: nowrap;
}

.spaceman {
    text-shadow: 0 0 5px #73ABAD;
}

.command {
    text-shadow: 0 0 5px #73ABAD;
}

.message {
    color: #5E81AC;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}


#command-line {
    color: #88C0D0;
    background-color: #2E3440;
}

#terminal {
    color: #88C0D0;
    background-color: #2E3440;
}

.path {
    display: inline-block;
    color: #8FBCBB;
    background-color: #2E3440;
} 

.info {
    color: #BF616A;
} 

.link {
    color: #5E81AC;
    text-shadow: 0 0 5px #73ABAD;
}

#cursor {
    display: inline-block;
    animation: blinker 1s linear infinite;
}

#texter {
    left: -1000px;
    position: absolute;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

